--- a/server/pom.xml
+++ b/server/pom.xml
@@ -312,6 +312,11 @@
             <version>2.8.7</version>
         </dependency>
         <dependency>
+            <groupId>com.squareup.moshi</groupId>
+            <artifactId>moshi</artifactId>
+            <version>1.12.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.blueconic</groupId>
             <artifactId>browscap-java</artifactId>
             <version>1.3.6</version>
