--- a/client/angular/package.json
+++ b/client/angular/package.json
@@ -20,16 +20,16 @@
         "@microfocus/ias-icons": "1.0.4",
         "@microfocus/ng-ias": "1.0.1",
         "@microfocus/ux-ias": "1.1.2",
-        "@uirouter/angularjs": "1.0.15",
-        "angular": "^1.7.9",
-        "angular-aria": "1.7.8",
-        "angular-sanitize": "1.7.9",
-        "angular-translate": "2.18.1",
-        "core-js": "3.5.0",
+        "@uirouter/angularjs": "1.0.29",
+        "angular": "1.8.2",
+        "angular-aria": "1.8.2",
+        "angular-sanitize": "1.8.2",
+        "angular-translate": "2.19.0",
+        "core-js": "3.18.2",
         "textangular": "1.5.16"
     },
     "devDependencies": {
-        "@types/angular": "^1.8.1",
+        "@types/angular": "^1.8.3",
         "@types/angular-mocks": "1.5.11",
         "@types/angular-translate": "2.15.2",
         "@types/angular-ui-router": "1.1.40",
@@ -46,7 +46,7 @@
         "imports-loader": "0.8.0",
         "jasmine": "3.2.0",
         "jasmine-core": "3.2.1",
-        "jshint": "^2.13.0",
+        "jshint": "^2.13.1",
         "jshint-loader": "0.8.4",
         "json-loader": "0.5.7",
         "karma": "^4.4.1",
