--- a/server/pom.xml
+++ b/server/pom.xml
@@ -309,7 +309,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.8</version>
+            <version>2.8.9</version>
         </dependency>
         <dependency>
             <groupId>com.blueconic</groupId>
@@ -325,7 +325,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-nop</artifactId>
-            <version>1.7.22</version>
+            <version>2.0.0-alpha5</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
