--- a/server/pom.xml
+++ b/server/pom.xml
@@ -209,7 +209,7 @@
         <dependency>
             <groupId>com.github.ldapchai</groupId>
             <artifactId>ldapchai</artifactId>
-            <version>0.8.2-SNAPSHOT</version>
+            <version>0.8.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.directory.api</groupId>
