--- a/server/pom.xml
+++ b/server/pom.xml
@@ -212,6 +212,11 @@
             <version>0.8.1</version>
         </dependency>
         <dependency>
+            <groupId>org.jrivard.xmlchai</groupId>
+            <artifactId>xmlchai</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.directory.api</groupId>
             <artifactId>api-all</artifactId>
             <version>2.1.0</version>
