--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -84,10 +84,11 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- attaches the docker image as an maven-tracked artifact -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <id>attach-artifacts</id>
