--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,7 @@
                         </goals>
                         <phase>package</phase>
                         <configuration>
+                            <notimestamp>true</notimestamp>
                             <archive>
                                 <manifestEntries>
                                     <Implementation-Archive-Name>pwm.javadoc</Implementation-Archive-Name>
@@ -236,7 +237,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.9.0</version>
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
@@ -252,7 +253,7 @@
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
-                        <version>9.1</version>
+                        <version>9.2.1</version>
                     </dependency>
                 </dependencies>
                 <executions>
@@ -331,12 +332,12 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.4.2.2</version>
+                <version>4.5.3.0</version>
                 <dependencies>
                     <dependency>
                         <groupId>com.github.spotbugs</groupId>
                         <artifactId>spotbugs</artifactId>
-                        <version>4.5.0</version>
+                        <version>4.5.3</version>
                     </dependency>
                 </dependencies>
                 <configuration>
@@ -385,7 +386,7 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>6.4.1</version>
+                <version>6.5.3</version>
                 <executions>
                     <execution>
                         <goals>
@@ -440,7 +441,7 @@
         <dependency>
             <groupId>com.github.spotbugs</groupId>
             <artifactId>spotbugs-annotations</artifactId>
-            <version>4.5.0</version>
+            <version>4.5.3</version>
             <scope>provided</scope>
         </dependency>
 
@@ -454,19 +455,26 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>4.0.0</version>
+            <version>4.2.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.21.0</version>
+            <version>3.22.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock</artifactId>
             <version>2.27.2</version>
+            <scope>test</scope>
+        </dependency>
+	<!-- older version of jackson databind required by wiremock 2.27.2 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.11.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -478,15 +486,14 @@
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-core</artifactId>
-            <version>1.33</version>
+            <version>1.34</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-generator-annprocess</artifactId>
-            <version>1.33</version>
+            <version>1.34</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 </project>
