--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -104,7 +104,7 @@ health.certificate.warnSeconds=2592000
 health.disk.minFreeWarning=500000000
 health.database.cautionDurationMS=10800000
 health.ldap.cautionDurationMS=259200000
-health.ldap.errorLifetimeMS=
+health.ldap.errorLifetimeMS=604800000
 health.ldap.proxy.pwExpireWarnSeconds=2592000
 health.ldap.userSearch.warnMS=500
 health.ldap.userSearch.searchTerm=@RandomChar:10@-healthcheck
