--- a/client/angular/package.json
+++ b/client/angular/package.json
@@ -24,7 +24,7 @@
         "angular": "^1.7.9",
         "angular-aria": "1.7.8",
         "angular-sanitize": "1.7.9",
-        "angular-translate": "2.18.1",
+        "angular-translate": "^2.19.0",
         "core-js": "3.5.0",
         "textangular": "1.5.16"
     },
@@ -46,7 +46,7 @@
         "imports-loader": "0.8.0",
         "jasmine": "3.2.0",
         "jasmine-core": "3.2.1",
-        "jshint": "^2.13.0",
+        "jshint": "^2.13.4",
         "jshint-loader": "0.8.4",
         "json-loader": "0.5.7",
         "karma": "^4.4.1",
