--- a/pom.xml
+++ b/pom.xml
@@ -255,7 +255,7 @@
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
-                        <version>10.3</version>
+                        <version>10.3.1</version>
                     </dependency>
                 </dependencies>
                 <executions>
@@ -339,7 +339,7 @@
                     <dependency>
                         <groupId>com.github.spotbugs</groupId>
                         <artifactId>spotbugs</artifactId>
-                        <version>4.7.0</version>
+                        <version>4.7.1</version>
                     </dependency>
                 </dependencies>
                 <configuration>
@@ -444,8 +444,51 @@
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>3.3.0</version>
             </plugin>
+
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M7</version>
+                    <executions>
+                        <execution>
+                            <id>default-test</id>
+                            <goals>
+                                <goal>test</goal>
+                            </goals>
+                            <phase>test</phase>
+                            <configuration>
+                                <trimStackTrace>false</trimStackTrace>
+                                <skipTests>${skipTests}</skipTests>
+                                <excludes>
+                                    <exclude>**/ExtendedTest*.java</exclude>
+                                    <exclude>**/*ExtendedTest*.java</exclude>
+                                </excludes>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <id>extended-test</id>
+                            <goals>
+                                <goal>test</goal>
+                            </goals>
+                            <phase>test</phase>
+                            <configuration>
+                                <skipTests>${skipExtendedTests}</skipTests>
+                                <includes>
+                                    <include>**/ExtendedTest*.java</include>
+                                    <include>**/*ExtendedTest*.java</include>
+                                </includes>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+
+        </pluginManagement>
     </build>
+
 
     <!-- common dependencies -->
     <dependencies>
@@ -458,7 +501,7 @@
         <dependency>
             <groupId>com.github.spotbugs</groupId>
             <artifactId>spotbugs-annotations</artifactId>
-            <version>4.7.0</version>
+            <version>4.7.1</version>
             <scope>provided</scope>
         </dependency>
 
