add property http.client.useThreadLocal

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -133,6 +133,7 @@ http.client.response.maxSize=20000000
 http.client.enableHostnameVerification=true
 http.client.promiscuous.wordlist.enable=true
 http.client.implementation=password.pwm.svc.httpclient.ApachePwmHttpClient
+http.client.useThreadLocal=false
 http.header.server=@PwmAppName@
 http.header.sendContentLanguage=true
 http.header.sendXAmb=true
