--- a/data-service/pom.xml
+++ b/data-service/pom.xml
@@ -82,6 +82,7 @@
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
+                            <propertiesEncoding>ISO-8859-1</propertiesEncoding>
                             <outputDirectory>${project.build.outputDirectory}/src</outputDirectory>
                             <resources>
                                 <resource><directory>src/main/java</directory></resource>
