remove outdated seedlist service

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -263,6 +263,8 @@ otp.qrImage.width=200
 otp.encryptionAlg=AES
 password.randomGenerator.maxAttempts=2000
 password.randomGenerator.maxLength=1024
+password.randomGenerator.minLength=12
+password.randomGenerator.defaultStrength=50
 password.randomGenerator.jitter.count=50
 password.strength.threshold.veryStrong=100
 password.strength.threshold.strong=75
