convert log4j to logback

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -230,8 +230,11 @@ macro.ldapAttr.maxLength=100
 logging.cspReport.enable=true
 logging.devOutput.enable=false
 logging.extra.periodicThreadDumpIntervalSeconds=0
-logging.outputConfiguration=true
-logging.pattern=%d{yyyy-MM-dd'T'HH:mm:ss'Z'}, %-5p, %c{2}, %m%n
+logging.logOutputMode=traditional
+logging.output.configuration.enable=true
+logging.output.healthCheck.enable=false
+logging.output.runtime.enable=false
+logging.packageList=password.pwm,com.novell.ldapchai,org.jasig.cas.client
 logging.file.maxSize=10MB
 logging.file.maxRollover=50
 logging.file.path=logs
