fix configeditor UI setting testers and add async/timeout functionality

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -75,6 +75,7 @@ config.enableJbCryptPwLibrary=true
 configEditor.blockOldIE=true
 configEditor.userPermission.matchResultsLimit=5000
 configEditor.idleTimeoutSeconds=900
+configEditor.settingFunction.timeoutMs=5000
 configGuide.idleTimeoutSeconds=3600
 configManager.zipDebug.maxLogBytes=50000000
 configManager.zipDebug.maxLogSeconds=120
