process report enhancements

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -302,8 +302,9 @@ queue.sms.maxCount=100000
 queue.syslog.retryTimeoutMs=30000
 queue.syslog.maxAgeMs=2592000000
 queue.syslog.maxCount=100000
+reporting.ldap.recordJob.timeoutMs=60000
+reporting.ldap.recordJob.threads=30
 reporting.ldap.searchTimeoutMs=1800000
-reporting.ldap.searchThreads=30
 reporting.maxReportAgeSeconds=864000
 recaptcha.clientJsUrl=//www.recaptcha.net/recaptcha/api.js
 recaptcha.clientIframeUrl=//www.recaptcha.net/recaptcha/api/noscript
