update file logging strategy to time+size roll-over

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -236,8 +236,9 @@ logging.output.configuration.enable=true
 logging.output.healthCheck.enable=false
 logging.output.runtime.enable=false
 logging.packageList=password.pwm,com.novell.ldapchai,org.jasig.cas.client
-logging.file.maxSize=10MB
-logging.file.maxRollover=50
+logging.file.maxFileSize=100MB
+logging.file.maxTotalSize=1GB
+logging.file.maxHistory=90
 logging.file.path=logs
 newUser.ldap.useTempPassword=auto
 newUser.token.allowPlainPassword=true
