refactor environment properties

--- a/server/src/main/resources/password/pwm/PwmConstants.properties
+++ b/server/src/main/resources/password/pwm/PwmConstants.properties
@@ -36,6 +36,7 @@ trial=false
 url.pwm-home=https://github.com/pwm-project/pwm
 paramName.token=token
 defaultConfigFilename=PwmConfiguration.xml
+defaultEnvironmentPropertiesFilename=application.properties
 defaultPropertiesConfigFilename=silent.properties
 enableEulaDisplay=false
 applicationPathInfoFile=applicationPath.properties
