change default html error output to false, remove oauth error text from error messages

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -122,7 +122,7 @@ http.resources.pathNonceEnable=true
 http.resources.pathNoncePrefix=nonce-
 http.resources.zipFiles=[]
 http.gzip.enable=true
-http.errors.allowHtml=true
+http.errors.allowHtml=false
 http.basicAuth.charset=UTF-8
 http.body.maxReadLength=10485760
 http.client.alwaysLogEntities=false
