update build manifest

--- a/client/angular/tsconfig.json
+++ b/client/angular/tsconfig.json
@@ -9,7 +9,7 @@
         ],
         "module": "commonjs",
         "removeComments": true,
-        "sourceMap": true,
+        "sourceMap": false,
         "target": "es5"
     },
     "files": [
