--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,6 @@
         <checkstyle.skip>false</checkstyle.skip>
         <skipTests>false</skipTests>
         <owasp.skip>false</owasp.skip>
-        <jarsigner.skip>true</jarsigner.skip>
 
         <!-- git.commit.time is populated via git-commit-id-plugin and results in a (hopefully) reproducible maven build -->
         <project.build.outputTimestamp>${git.commit.time}</project.build.outputTimestamp>
@@ -79,12 +78,6 @@
             <id>enable-javadoc</id>
             <properties>
                 <maven.javadoc.skip>false</maven.javadoc.skip>
-            </properties>
-        </profile>
-        <profile>
-            <id>enable-jarsigner</id>
-            <properties>
-                <jarsigner.skip>false</jarsigner.skip>
             </properties>
         </profile>
         <profile>
@@ -159,19 +152,25 @@
                         <configuration>
                             <notimestamp>true</notimestamp>
                             <archive>
+                                <manifest>
+                                    <addDefaultEntries>false</addDefaultEntries>
+                                    <addDefaultImplementationEntries>false</addDefaultImplementationEntries>
+                                </manifest>
                                 <manifestEntries>
-                                    <Implementation-Archive-Name>pwm.javadoc</Implementation-Archive-Name>
+                                    <Artifact-ID>${project.artifactId}</Artifact-ID>
                                     <Implementation-Title>${project.name}</Implementation-Title>
                                     <Implementation-Version>${project.version}</Implementation-Version>
                                     <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
                                     <Implementation-URL>${project.organization.url}</Implementation-URL>
-                                    <Implementation-Build-Java-Spec-Version>${java.specification.version}</Implementation-Build-Java-Spec-Version>
+                                    <Implementation-Build-Java-Version>${maven.compiler.target}</Implementation-Build-Java-Version>
                                     <SCM-Git-Branch>${git.branch}</SCM-Git-Branch>
                                     <SCM-Git-Commit-ID>${git.commit.id}</SCM-Git-Commit-ID>
                                     <SCM-Git-Commit-ID-Abbrev>${git.commit.id.abbrev}</SCM-Git-Commit-ID-Abbrev>
                                     <SCM-Git-Commit-ID-Description>${git.commit.id.describe}</SCM-Git-Commit-ID-Description>
                                     <SCM-Git-Commit-Timestamp>${git.commit.time}</SCM-Git-Commit-Timestamp>
-                                    <SCM-Git-Commit-Dirty>${git.dirty}</SCM-Git-Commit-Dirty>                                </manifestEntries>
+                                    <SCM-Git-Commit-Dirty>${git.dirty}</SCM-Git-Commit-Dirty>
+                                    <SCM-Git-Remote-Origin-URL>${git.remote.origin.url}</SCM-Git-Remote-Origin-URL>
+                                </manifestEntries>
                             </archive>
                             <source>${maven.compiler.release}</source>
                         </configuration>
@@ -377,33 +376,6 @@
                     <skip>${owasp.skip}</skip>
                     <yarnAuditAnalyzerEnabled>false</yarnAuditAnalyzerEnabled>
                     <nodeAnalyzerEnabled>false</nodeAnalyzerEnabled>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jarsigner-plugin</artifactId>
-                <version>3.0.0</version>
-                <executions>
-                    <execution>
-                        <id>sign</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>sign</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <skip>${jarsigner.skip}</skip>
-                    <keystore>${jarsigner.keystore}</keystore>
-                    <alias>${jarsigner.alias}</alias>
-                    <storepass>${jarsigner.storepass}</storepass>
-                    <keypass>${jarsigner.keypass}</keypass>
-                    <verbose>false</verbose>
-                    <removeExistingSignatures>true</removeExistingSignatures>
-                    <includes>
-                        <include>*.jar</include>
-                        <include>*.war</include>
-                    </includes>
                 </configuration>
             </plugin>
             <plugin>
