--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -95,21 +95,25 @@
 
                     <webXml>${webXmlForJspPreCompiledInjection}</webXml>
                     <archive>
+                        <manifest>
+                            <addDefaultEntries>false</addDefaultEntries>
+                            <addDefaultImplementationEntries>false</addDefaultImplementationEntries>
+                        </manifest>
                         <manifestEntries>
-                            <Implementation-Archive-Name>pwm.war</Implementation-Archive-Name>
+                            <Artifact-ID>${project.artifactId}</Artifact-ID>
                             <Implementation-Title>${project.name}</Implementation-Title>
                             <Implementation-Version>${project.version}</Implementation-Version>
                             <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
                             <Implementation-URL>${project.organization.url}</Implementation-URL>
-                            <Implementation-Build-Java-Spec-Version>${java.specification.version}</Implementation-Build-Java-Spec-Version>
-                            <Implementation-Revision>${build.revision}</Implementation-Revision>
-                            <Implementation-Version-Display>v${project.version} b${build.number} r${build.revision}</Implementation-Version-Display>
+                            <Implementation-Build-Java-Version>${maven.compiler.target}</Implementation-Build-Java-Version>
                             <SCM-Git-Branch>${git.branch}</SCM-Git-Branch>
                             <SCM-Git-Commit-ID>${git.commit.id}</SCM-Git-Commit-ID>
                             <SCM-Git-Commit-ID-Abbrev>${git.commit.id.abbrev}</SCM-Git-Commit-ID-Abbrev>
                             <SCM-Git-Commit-ID-Description>${git.commit.id.describe}</SCM-Git-Commit-ID-Description>
                             <SCM-Git-Commit-Timestamp>${git.commit.time}</SCM-Git-Commit-Timestamp>
-                            <SCM-Git-Commit-Dirty>${git.dirty}</SCM-Git-Commit-Dirty>                        </manifestEntries>
+                            <SCM-Git-Commit-Dirty>${git.dirty}</SCM-Git-Commit-Dirty>
+                            <SCM-Git-Remote-Origin-URL>${git.remote.origin.url}</SCM-Git-Remote-Origin-URL>
+                        </manifestEntries>
                     </archive>
                 </configuration>
             </plugin>
@@ -124,9 +128,7 @@
                         </goals>
                         <phase>compile</phase>
                         <configuration>
-                            <compilerVersion>1.8</compilerVersion>
                             <trimSpaces>true</trimSpaces>
-                            <compilerVersion>${maven.compiler.source}</compilerVersion>
                             <keepSources>false</keepSources>
                             <threads>20</threads>
                         </configuration>
