introduce domain properties

--- a/server/src/main/resources/password/pwm/DomainProperty.properties
+++ b/server/src/main/resources/password/pwm/DomainProperty.properties
@@ -38,6 +38,18 @@ http.cookie.login.name=SESSION
 http.cookie.nonce.name=ID
 http.cookie.nonce.length=32
 http.cookie.sameSite.value=Strict
+http.parameter.oauth.accessToken=access_token
+http.parameter.oauth.attributes=attributes
+http.parameter.oauth.clientID=client_id
+http.parameter.oauth.clientSecret=client_secret
+http.parameter.oauth.code=code
+http.parameter.oauth.expires=expires_in
+http.parameter.oauth.responseType=response_type
+http.parameter.oauth.redirectUri=redirect_uri
+http.parameter.oauth.refreshToken=refresh_token
+http.parameter.oauth.scope=scope
+http.parameter.oauth.state=state
+http.parameter.oauth.grantType=grant_type
 ldap.resolveCanonicalDN=true
 ldap.cache.canonical.enable=true
 ldap.cache.canonical.seconds=600
@@ -63,3 +75,8 @@ ldap.search.parallel.enable=true
 ldap.search.parallel.factor=5
 ldap.search.parallel.threadMax=50
 ldap.oracle.postTempPasswordUseCurrentTime=false
+oauth.id.accessGrantType=authorization_code
+oauth.id.refreshGrantType=refresh_token
+oauth.id.requestType=code
+oauth.enableTokenRefresh=false
+oauth.returnUrlOverride=
