maven and dependency updates

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
     </profiles>
 
     <build>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.extensions</groupId>
+                <artifactId>maven-build-cache-extension</artifactId>
+                <version>1.0.1</version>
+            </extension>
+        </extensions>
         <plugins>
             <plugin>
                 <groupId>org.commonjava.maven.plugins</groupId>
@@ -142,7 +149,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.5.0</version>
+                <version>3.6.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -221,7 +228,7 @@
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
-                        <version>10.12.3</version>
+                        <version>10.12.4</version>
                     </dependency>
                 </dependencies>
                 <executions>
@@ -231,7 +238,6 @@
                         <configuration>
                             <propertyExpansion>basedir=${project.root.basedir}</propertyExpansion>
                             <configLocation>build/checkstyle.xml</configLocation>
-                            <encoding>UTF-8</encoding>
                             <consoleOutput>true</consoleOutput>
                             <includeTestResources>true</includeTestResources>
                             <failsOnError>true</failsOnError>
@@ -254,7 +260,6 @@
                         <configuration>
                             <propertyExpansion>basedir=${project.root.basedir}</propertyExpansion>
                             <configLocation>${project.root.basedir}/build/checkstyle-header.xml</configLocation>
-                            <encoding>UTF-8</encoding>
                             <consoleOutput>true</consoleOutput>
                             <includeTestResources>true</includeTestResources>
                             <failsOnError>true</failsOnError>
@@ -277,7 +282,6 @@
                         <configuration>
                             <propertyExpansion>basedir=${project.root.basedir}</propertyExpansion>
                             <configLocation>${project.root.basedir}/build/checkstyle-jsp.xml</configLocation>
-                            <encoding>UTF-8</encoding>
                             <consoleOutput>true</consoleOutput>
                             <includeTestResources>true</includeTestResources>
                             <failsOnError>true</failsOnError>
@@ -300,7 +304,7 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.7.3.5</version>
+                <version>4.7.3.6</version>
                 <dependencies>
                     <dependency>
                         <groupId>com.github.spotbugs</groupId>
@@ -434,7 +438,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.28</version>
+            <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -464,7 +468,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.tomakehurst</groupId>
+            <groupId>org.wiremock</groupId>
             <artifactId>wiremock</artifactId>
             <version>3.0.1</version>
             <scope>test</scope>
